--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -486,12 +486,13 @@ further research and development is needed.
 \label{motivation}
 
 Within the \emph{DCMI Task Group}, we initiated a collaboratively curated database of RDF validation requirements which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. It is publicly available and open for further contributions\footnote{Online at \url{http://purl.org/net/rdf-validation}}.
-The database connects requirements to use cases, case studies and implementations and forms the basis of this paper in which we will present the key findings we got from the analysis of the RDF validation requirements. 
+The database connects requirements to use cases, case studies and solutions and forms the basis of this paper.
+In this paper, we highlight the key findings from the analysis of the RDF validation requirements. 
 Based on our work in the \emph{DCMI Task Group} and in cooperation with the \emph{W3C Working Group}, 
-we identified and published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
+we identified and published by today 81 requirements to validate RDF data and to formulate RDF constraints that are required by various stakeholders for data applications.
 Each of these requirements corresponds to a constraint type from which concrete constraints are instantiated to be checked on RDF data.
 Requirements/constraint types are uniquely identified by alphanumeric technical identifiers.
-\emph{Minimum qualified cardinality restrictions} (\emph{R-75}) is an example of a constraint type which corresponds to the requirement {\small\emph{R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES}}. 
+\emph{Minimum qualified cardinality restrictions} (\emph{R-75}),e.g., is a constraint type which corresponds to the requirement {\small\emph{R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES}}. 
 We recently published a technical report \cite{BoschNolleAcarEckert2015}
 %\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} 
 (serving as appendix of this paper) 
