--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -2594,6 +2594,10 @@ The first solution is applied on local knowledge bases whereas the second is mor
 
 %Another important finding is that, none of other languages covers the other so far in terms of expressivity.
 
+Within the \emph{DCMI Task Group} and in cooperation with the \emph{W3C Working Group}, 
+we initiated a collaboratively curated database of RDF validation requirements 
+which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. 
+In this paper, we highlight the key findings from the analysis of the RDF validation requirements co. 
 We published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
 Each of these requirements corresponds to a constraint type which is mapped to \emph{DL}
 to determine which \emph{DL} constructs are needed to express each constraint type
