--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -487,7 +487,7 @@ further research and development is needed.
 \subsection{Motivation and Overview}
 \label{motivation}
 
-Within the \emph{DCMI Task Group}, we initiated a collaboratively curated database of RDF validation requirements which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. It is publicly available and open for further contributions\footnote{Online at \url{http://purl.org/net/rdf-validation}}.
+Within the \emph{DCMI Task Group}, we initiated a collaboratively curated database of RDF validation requirements which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. It is publicly available and open for further contributions\footnote{Online at \url{http://purl.org/net/rdf-validation}\label{rdf-validation-database}}.
 The database connects requirements to use cases, case studies and solutions and forms the basis of this paper.
 In this paper, we highlight the key findings from the analysis of the RDF validation requirements. 
 Based on our work in the \emph{DCMI Task Group} and in cooperation with the \emph{W3C Working Group}, 
@@ -2594,8 +2594,8 @@ The first solution is applied on local knowledge bases whereas the second is mor
 
 %Another important finding is that, none of other languages covers the other so far in terms of expressivity.
 
-Within the \emph{DCMI Task Group} and in cooperation with the \emph{W3C Working Group}, 
-we initiated a collaboratively curated database of RDF validation requirements 
+Within the \emph{DCMI RDF Application Profiles Task Group} and in cooperation with the \emph{W3C RDF Data Shapes Working Group}, 
+we initiated a collaboratively curated database of RDF validation requirements\footref{rdf-validation-database} 
 which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. 
 In this paper, we highlight the key findings from the analysis of the RDF validation requirements co. 
 We published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
