--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -2598,10 +2598,9 @@ Within the \emph{DCMI RDF Application Profiles Task Group} and in cooperation wi
 we initiated a collaboratively curated database of RDF validation requirements\footref{rdf-validation-database} 
 which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. 
 In this paper, we highlight the key findings from the analysis of the RDF validation requirements. 
-Based on our work in these working groups, we published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
-Each of these requirements corresponds to a constraint type which is mapped to \emph{DL}
-to determine which \emph{DL} constructs are needed to express each constraint type
-and therefore to provide their foundational basis \cite{BoschNolleAcarEckert2015}.
+Based on our work in these working groups, 
+we published by today 81 requirements to validate RDF data and to formulate RDF constraints that are required by various stakeholders for data applications.
+Each of these requirements corresponds to a constraint type \cite{BoschNolleAcarEckert2015}.
 
 %Reasoning and validation are closely related.
 In order to realize interoperable solutions for data validation,
