--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -2628,11 +2628,11 @@ since the combination of \emph{DL} constructs, needed to express a constraint ty
 %\emph{OWL 2} reasoning requires the \emph{OWA} with the \emph{nUNA} 
 %whereas RDF validation is classically based on the \emph{CWA} and the \emph{UNA}.
 %For the majority of the constraint types it makes a difference if the \emph{CWA} or the \emph{OWA} and if the \emph{UNA} or the \emph{nUNA} is assumed (Section \ref{CWA-UNA-dependency}).
-RDF validation and reasoning assume different semantics which may lead to different validation results when applied to particular constraint types. %when particular constraint types are used for validation and for reasoning. 
+Validation and reasoning assume different semantics which may lead to different validation results when applied to particular constraint types. %when particular constraint types are used for validation and for reasoning. 
 \emph{OWL 2} reasoning requires the \emph{OWA} with the \emph{nUNA}, 
-whereas RDF validation is based on the \emph{CWA} and the \emph{UNA}.
-Therefore, we investigate for each constraint type
-(1) if the constraint type depends on the \emph{CWA} and (2) if the constraint type depends on the \emph{UNA}.
+whereas validation is based on the \emph{CWA} and the \emph{UNA}.
+Therefore, we investigated for each constraint type
+(1) if it depends on the \emph{CWA} and (2) if it depends on the \emph{UNA}.
 For the majority of the constraint types it makes a difference if the \emph{CWA} or the \emph{OWA} and if the \emph{UNA} or the \emph{nUNA} is assumed (Section \ref{CWA-UNA-dependency}).
 
 Using these findings, we determined for the five most common constraint languages which constraint types they enable to express.
