--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -2374,16 +2374,16 @@ Reasoning in \emph{OWL 2} is based on the {\em open-world assumption} (\emph{OWA
 %\tb{the following example does not show the redundancy problem!}
 %\tb{2. benefit: reasoning solves redundancy problem}
 As each \emph{book} must have a \emph{title} {\small\ms{(Book $\sqsubseteq \exists$ title.$\top$)}} and {\em Hamlet} is a \emph{book} {\small\ms{(Book(Hamlet)),}}
-{\em Hamlet} must have at least one \emph{title}.
-In an \emph{OWA} setting, this axiom does not cause a violation, even if there is no explicitly defined \emph{title}, since there must be a \emph{title} for this \emph{book} which we may not know ($\mathcal{K}$ is consistent).
-As \emph{OWA} would be a shortcoming in RDF validation and
-as RDF validation has its origin in the XML world, 
+{\em Hamlet} must have at least one \emph{title} as well.
+In an \emph{OWA} setting, this constraint does not cause a violation, even if there is no explicitly defined \emph{title}, since there must be a \emph{title} for this \emph{book} which we may not know ($\mathcal{K}$ is consistent).
+%As \emph{OWA} would be a shortcoming for RDF validation and
+As RDF validation has its origin in the XML world
 many RDF validation scenarios require the {\em closed-world assumption} (\emph{CWA}), i.e., a statement is inferred to be false if it cannot be proved to be true.
-Classical constraint languages are based on \emph{CWA} where constraints need to be satisfied only by named individuals. 
-\emph{CWA} yields in return to a violation in the example since there is no explicitly defined \emph{title} for the \emph{book} {\em Hamlet}. 
-Furthermore, \emph{OWL 2} is based on the {\em non-unique name assumption} (\emph{nUNA}) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (\emph{UNA})). 
-If RDF validation would assume \emph{OWA} and \emph{nUNA}, validation won’t be that restrictive and therefore we won’t get the intended validation results.
-Although, \emph{DLs/OWL 2} do not assume \emph{UNA}, they have the construct \emph{owl:sameAs} to state that two names are the same or not.
+Thus, classical constraint languages are based on the \emph{CWA} where constraints need to be satisfied only by named individuals. 
+In the example, the \emph{CWA} yields to a violation since there is no explicitly defined \emph{title} for the \emph{book} {\em Hamlet}. 
+\emph{OWL 2} is based on the {\em non-unique name assumption} (\emph{nUNA}) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (\emph{UNA})). 
+Although, \emph{DLs/OWL 2} do not assume \emph{UNA}, they have the constructs \emph{owl:sameAs} and \emph{owl:differentFrom} to state that two names are the same or different.
+If validation would assume \emph{OWA} and \emph{nUNA}, validation won’t be that restrictive and therefore we won’t get the intended validation results.
 %There is a clash caused by the functional property {\em title} {\small\ms{(funct (title))}} and the \emph{UNA},
 %since the book {\em Huckleberry-Finn} has more than one title
 %{\small\ms{(title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}}, {\small\ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn))}}.
@@ -2415,16 +2415,16 @@ is assumed, i.e., we examine for each constraint type (1) if the constraint type
 %as all information needed for validation is explicitly available in both cases. 
 We classify constraint types according to the dependency on the \emph{CWA} and on the \emph{UNA} which leads to four sets of constraint types:
 (1) $\mathcal{CWA}$ denotes the set of constraint types which are dependent on the \emph{CWA},
-	i.e., the set of constraint types for which it makes a difference if the \emph{CWA} or the \emph{OWA} is assumed.
+	i.e., the set of constraint types for which it makes a difference in terms of validation results if the \emph{CWA} or the \emph{OWA} is assumed.
 {\em Minimum qualified cardinality restrictions} (\emph{R-75}) is a $\mathcal{CWA}$ constraint type, i.e., depends on the \emph{CWA}.
 \emph{Publications}, e.g., must have at least one \emph{author} {\small\ms{(Publication $\sqsubseteq$ $\geq$1 author.Person).}}
 In a \emph{CWA} setting, a \emph{publication} without an explicitly stated author violates the constraint, 
 whereas, with \emph{OWA} semantics, 
 a \emph{publication} without an explicitly stated \emph{author} does not raise a violation 
-as the axiom entails that there must be an \emph{author} which we may not know.
+as the constraint entails that there must be an \emph{author} which we may not know.
 (2) $\overline{\mathcal{CWA}}$ is the complement of $\mathcal{CWA}$ and thus includes constraint types which are independent on the \emph{CWA}.
 Nothing can be a \emph{book} and a \emph{journal article}  at the same time {\small\ms{(Book $\sqcap$ JournalArticle $\sqsubseteq$ $\perp$).}}
-For the constraint type {\em disjoint classes} (\emph{R-7}), it does not make any difference if the \emph{CWA} or the \emph{OWA} is taken,
+For the constraint type {\em disjoint classes} (\emph{R-7}), it does not make any difference regarding validation results if the \emph{CWA} or the \emph{OWA} is taken,
 as if there is a \emph{publication} which is a \emph{book} and a \emph{journal article} a violation is raised in both settings,
 i.e., additional information does not change validation results.
 %as all information needed for validation is explicitly available in both cases. 
@@ -2438,8 +2438,8 @@ i.e., additional information does not change validation results.
 %\end{itemize}
 
 (3) $\mathcal{UNA}$ denotes the set of constraint types which are dependent on the \emph{UNA}.
-For \emph{Functional properties} (\emph{R-57/65}), it makes a difference if \emph{UNA} or \emph{nUNA} is assumed.
-The property \emph{title} is functional {\small\ms{(funct (title)),}} i.e., for each \emph{book} there can be at most one distinct \emph{title}.
+For \emph{Functional properties} (\emph{R-57/65}), it makes a difference with regard to validation results if \emph{UNA} or \emph{nUNA} is assumed.
+As the property \emph{title} is functional {\small\ms{(funct (title)),}} a \emph{book} can have at most one distinct \emph{title}.
 \emph{UNA} causes a clash
 if the \emph{book} {\em Huckleberry-Finn} has more than one \emph{title}.
 %(\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}, \ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}).
@@ -2464,14 +2464,14 @@ a violation is thrown.
 The \emph{literal value comparison} constraint type is independent from the \emph{UNA}
 as the violation is not resolved 
 in case there are further resources (e.g. \emph{AlbertEinstein}, \emph{Albert\_Einstein}) which point to correct \emph{birth} and \emph{death dates}
-and which may be the same as the violating resources when \emph{nUNA} is assumed.
+and which may be the same as the violating resource when \emph{nUNA} is assumed.
 
 We evaluated for each constraint type 
 if it is dependent or independent on the \emph{CWA} and on the \emph{UNA} (for a detailed analysis we refer to the appendix of this paper \cite{BoschNolleAcarEckert2015}). 
 The result of this evaluation is that we distinguish between 46 (56.8\%) $\mathcal{CWA}$ and 35 (43.2\%) $\overline{\mathcal{CWA}}$ and between 54 (66.6\%) $\mathcal{UNA}$ and 27 (33.3\%) $\overline{\mathcal{UNA}}$ constraint types.
-Hence, for the majority of the constraint types it makes a difference if the \emph{CWA} or the \emph{OWA} and if the \emph{UNA} or the \emph{nUNA} is assumed.
+Hence, for the majority of the constraint types it makes a difference in terms of validation results if the \emph{CWA} or the \emph{OWA} and if the \emph{UNA} or the \emph{nUNA} is assumed.
 For the $\mathcal{CWA}$ and the $\mathcal{UNA}$ constraint types, we have to be careful in case we want to use them for reasoning and for validation
-as in both usage scenarios we assume different semantics and therefore validation results differ.
+as in both usage scenarios we assume different semantics which may lead to different results.
 %\textcolor{red}{
 %feedback from Erman:
 %}
